@@ -218,7 +218,7 @@ public class Sheep extends CreatureBase {
         }
       }
     }
-    if (fell || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this);
+    if (fell || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this, false);
   }
 
   private static Random r = new Random();
