@@ -1,6 +1,6 @@
 package jfcraft.packet;
 
-/** Packet with 1 Int
+/** Packet with 2 Ints & 1 Boolean
  *
  * @author pquiring
  */
@@ -10,7 +10,8 @@ import jfcraft.data.*;
 import jfcraft.entity.*;
 
 public class PacketRiding extends Packet {
-  public int i1;
+  public int i1, i2;
+  public boolean mount;
 
   public PacketRiding() {}
 
@@ -18,24 +19,40 @@ public class PacketRiding extends Packet {
     super(cmd);
   }
 
-  public PacketRiding(byte cmd, int i1) {
+  public PacketRiding(byte cmd, int vehicle,int occupant,boolean mount) {
     super(cmd);
-    this.i1 = i1;
+    this.i1 = vehicle;
+    this.i2 = occupant;
+    this.mount = mount;
   }
 
   //process on client side
   public void process(Client client) {
-    int uid = i1;
-    if (uid == -1) {
-      client.player.vehicle = null;
+    VehicleBase v = (VehicleBase)client.world.getEntity(i1);
+    if (v == null) {
+      Static.log("Error:PacketRiding:VehicleBase not found");
+      return;
+    }
+    CreatureBase o;
+    if (i2 == client.player.uid) {
+      o = client.player;
     } else {
-      EntityBase e = client.world.getEntity(uid);
-      if (e == null) return;
-      e.occupant = client.player;
-      client.player.vehicle = e;
-      client.player.pos.x = e.pos.x;
-      client.player.pos.y = e.pos.y;
-      client.player.pos.z = e.pos.z;
+      o = (CreatureBase)client.world.getEntity(i2);
+    }
+    if (o == null) {
+      Static.log("Error:PacketRiding:CreatureBase not found");
+      return;
+    }
+//    Static.log("Riding:" + v + "," + o + ":" + mount);
+    if (mount) {
+      v.occupant = o;
+      o.vehicle = v;
+      o.pos.x = v.pos.x;
+      o.pos.y = v.pos.y;
+      o.pos.z = v.pos.z;
+    } else {
+      v.occupant = null;
+      o.vehicle = null;
     }
   }
 
@@ -43,6 +60,8 @@ public class PacketRiding extends Packet {
   public boolean write(SerialBuffer buffer, boolean file) {
     super.write(buffer, file);
     buffer.writeInt(i1);
+    buffer.writeInt(i2);
+    buffer.writeBoolean(mount);
     return true;
   }
 
@@ -50,6 +69,8 @@ public class PacketRiding extends Packet {
   public boolean read(SerialBuffer buffer, boolean file) {
     super.read(buffer, file);
     i1 = buffer.readInt();
+    i2 = buffer.readInt();
+    mount = buffer.readBoolean();
     return true;
   }
 }
